Bug 34199 - [llvmpipe] piglit framebuffer-srgb regression
Summary: [llvmpipe] piglit framebuffer-srgb regression
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-11 19:17 UTC by Vinson Lee
Modified: 2011-10-11 11:55 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
framebuffer-srgb.png (3.78 KB, image/png)
2011-02-11 19:17 UTC, Vinson Lee
Details
we don't support sRGB rendering, say so in is_format_supported() (650 bytes, patch)
2011-10-06 10:00 UTC, Brian Paul
Details | Splinter Review

Description Vinson Lee 2011-02-11 19:17:26 UTC
Created attachment 43280 [details]
framebuffer-srgb.png

mesa: df54b53b7d12a3bca5867b6649cb308feb36f0da (master)

piglit framebuffer-srgb has regressed. It still passes on swrast and softpipe.

$ ./bin/framebuffer-srgb
Probe at (30,30)
  Expected: 0.000000 0.583837 0.000000
  Observed: 0.000000 0.298039 0.000000
Probe at (20,0)
  Expected: 0.000000 0.797741 0.000000
  Observed: 0.000000 0.596078 0.000000
Comment 1 Vinson Lee 2011-02-11 19:27:04 UTC
21b0996dfcbe62c55dd31cc316cd47f2b8531d2e is the first bad commit
commit 21b0996dfcbe62c55dd31cc316cd47f2b8531d2e
Author: Dave Airlie <airlied@redhat.com>
Date:   Sun Feb 6 19:01:58 2011 +1000

    mesa/st: enable GL_EXT_framebuffer_sRGB
    
    If the formats don't match we need to update the surface with the new
    format.
    
    if we can render to SRGB formats, enable the extension
    
    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 1ebe33d2fe0e104a8e261d6a97e5034725c14809 dba1f242c4edbe8f410ca1d4ea3f728a829a7e35 M	src
bisect run success
Comment 2 Jose Fonseca 2011-02-14 07:14:24 UTC
This is most likely a llvmpipe bug: it advertises SRGB support but never implemented it.
Comment 3 Vinson Lee 2011-09-29 11:16:16 UTC
mesa: 1a867385d56022e904ef0235cbed545057fcb998 (master)

This regression is still present.
Comment 4 Brian Paul 2011-10-06 10:00:58 UTC
Created attachment 52052 [details] [review]
we don't support sRGB rendering, say so in is_format_supported()

We never implemented sRGB rendering in llvmpipe.  The attached patch adds a check in is_format_supported() to return false if we're asked if we can do it.
Comment 5 Brian Paul 2011-10-11 06:50:02 UTC
The llvmpipe driver doesn't support rendering to sRGB surfaces but that's not what we were telling the state tracker.
Fixed with commit 6b3e75de7c2dd6be6bf1acd0e996bdb1def702a1.
Comment 6 Vinson Lee 2011-10-11 11:55:11 UTC
mesa: b875838ec302c4e830e13ebd5fa834fd22830279 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.